Refactor subset generation to use ArrayList